# aoc_2022

./: .gitignore  cabal.project  flake.nix
day_one/: README.md  day-one.cabal
day_one/src/: Library.hs
day_one/test/: DayOneBenchmark.hs  DayOneTests.hs
day_three/: README.md  cabal.project  day-three.cabal
day_three/src/: Flat.hs  Naive.hs
day_three/test/: DayThreeBenchmark.hs  DayThreeTests.hs
day_two/: README.md  day-two.cabal
day_two/app/: Main.hs
day_two/src/: Library.hs
day_two/test/: DayTwoBenchmark.hs  DayTwoTests.hs
