cabal-version:      3.0
name:               day-two
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Patsakula Nikita
maintainer:         nikita.patsakula@gmail.com
extra-source-files: CHANGELOG.md

flag Dump
  description: Enables Core IR dump.
  manual:      True
  default:     False

flag WStrict
  description: Enables -Werror and Wunused-packages.
  manual:      True
  default:     False

common ghc-common-options
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Wnoncanonical-monad-instances
               -Wmissing-export-lists
               -Wpartial-fields
               -Wmissing-deriving-strategies
              --  -Wunused-packages
               -fhide-source-paths
               -fshow-hole-constraints
               -flate-specialise
               -fexpose-all-unfoldings
               -flate-dmd-anal
               -fstatic-argument-transformation
               -Wno-name-shadowing
               -fwrite-ide-info
               -hiedir=.hie

  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
                 -Wunicode-bidirectional-format-characters
                 -Werror=unicode-bidirectional-format-characters

  if impl(ghc >= 9.2)
    ghc-options:  -Wredundant-bang-patterns
                  -Woperator-whitespace
                  -Wimplicit-lift

  if impl(ghc >= 9.4)
    ghc-options:  -Wredundant-strictness-flags

  if flag(dump)
    ghc-options: -ddump-simpl

  if flag(wstrict)
    ghc-options: -Werror -Wunused-packages

  default-extensions:
    OverloadedStrings
    ImportQualifiedPost
    DerivingStrategies

  build-depends: base    >=4.14  && <=5.0
  default-language:   Haskell2010

library
  import:          ghc-common-options
  exposed-modules: Library
  build-depends:
    flatparse >= 0.3.5
    , bytestring >= 0.11.3
    , mmap
    , text
  hs-source-dirs:  src

executable day-two
  import:         ghc-common-options
  main-is:        Main.hs
  build-depends:  day-two, optparse-applicative
  hs-source-dirs: app
  ghc-options:
    -O2 -threaded
    -rtsopts
    -with-rtsopts=-N
    -with-rtsopts=--nonmoving-gc
    -with-rtsopts=-A64m
    -with-rtsopts=-AL128m

benchmark day-two-bench
  import:         ghc-common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        DayTwoBenchmark.hs
  build-depends:  day-two, tasty-bench
  ghc-options:
    -O2 -fllvm
    -with-rtsopts=-A64m
    -with-rtsopts=-AL128m

test-suite day-two-test
  import:         ghc-common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        DayTwoTests.hs
  build-depends:  day-two, tasty, tasty-hunit
